kubernetes-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: app-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: asia-south1-docker.pkg.dev/fast-ability-439911-u1/react-app/backend-app:latest
        ports:
        - containerPort: 3000
